syntax = "proto3";

package proto;

option go_package = "github.com/dynoinc/starflow/tests/proto";

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
} 