syntax = "proto3";

package proto;

option go_package = "github.com/dynoinc/starflow/tests/proto";

message OrderPizzaRequest {
  string pizza_type = 1;
  int32 quantity = 2;
  string credit_card_number = 3;
}

message OrderPizzaResponse {
  string order_id = 1;
  string status = 2;
}

message ProcessPaymentRequest {
  string credit_card_number = 1;
  int32 amount = 2;
}

message ProcessPaymentResponse {
  bool success = 1;
  string transaction_id = 2;
}

message BakePizzaRequest {
  string pizza_type = 1;
  int32 quantity = 2;
}

message BakePizzaResponse {
  bool success = 1;
} 